--- a/public/css/themes/dark.css
+++ b/public/css/themes/dark.css
@@ -8,7 +8,7 @@
   padding: 0 1.4rem 1.4rem;
   font-size: 1.4rem; }
 
-.dark .list-item, .dark .checkbox + label, .dark .form, .dark .header {
+.dark .list-item, .dark .checkbox + label, .dark .form {
   padding: 1.4rem;
   font-size: 1.4rem; }
 
@@ -27,7 +27,7 @@
 .dark .input:last-child, .dark .last.input {
   margin-right: 0; }
 
-.dark .btn-group, .dark .checkbox + label {
+.dark .btn-group, .dark .checkbox + label, .dark .header {
   padding-left: 1.4rem;
   padding-right: 1.4rem; }
 
