--- a/scss/mixins/_header.scss
+++ b/scss/mixins/_header.scss
@@ -4,7 +4,7 @@ $header-font-size: 2rem;
 @mixin header {
 	display: block;
 	position: relative;
-	@extend %vr-block;
+	@extend %h-paddings;
 
 	button {
 		padding: 1rem;
